samples/_failures_safe/1761537742_4d60f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e50942b.c: In function ‘main’:
./samples/SAFE/__tmp_0e50942b.c:148:5: error: expected declaration or statement at end of input
  148 |     input_matrix(&mat2, "B");
      |     ^~~~~~~~~~~~
